# AI-Food-Logistics-System

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
backend/database/: db.py  init_db.py  models.py
benchmarks/: benchmark_dispatch.py
configs/: settings.yaml  training.yaml
data_pipeline/: dataset_builder.py
digital_twin/: city_graph.py  driver_agent.py  order_generator.py  restaurant_queue.py  rl_env.py  run_digital_twin.py  simulator.py  traffic_model.py
docs/: architecture.md  security_audit_frontend.md
evaluation/: evaluate_eta.py
experiments/: experiment_runner.py
frontend/: package-lock.json  package.json
graph_engine/: baseline_shortest_path.py  gnn_model.py  graph_builder.py  graph_dataset.py  route_predictor.py  train_gnn.py
infra/: docker-compose.yml  kafka-start.sh  kafka-stop.sh
llm_agent/: food_agent.py  menu_database.py  tools.py
mega_simulator/: distributed_simulator.py  run_simulation.py
ml_models/: base_model.py
rl_dispatch/: action_space.py  agent.py  environment.py  inference.py  multi_agent_env.py  reward.py  state_encoder.py  train.py  train_multi_agent.py
scripts/: bootstrap_and_start.sh  generate_demand_data.py  generate_recommendation_data.py  healthcheck_all.sh  run_simulator.sh  start_full_system.sh  stop_demo.sh  stop_full_system.sh  train_eta.sh
tests/: test_api_smoke.py  test_config.py
training/: policy_model.py  train_dispatch_policy.py
utils/: config.py  constants.py  dataset.py  experiment.py  metrics.py
(+68 files in other folders)
